...
  const validateEntry = (): void => {
    setEmailError(false);
    setPasswordError(false);

    if (!email || !validateEmail(email)) {
      setEmailError(true);
      setError('Please enter a valid email address.');
      return;
    }
    if (!password || password.length < 6) {
      setPasswordError(true);
      setError('Password is required and must be up to 6 characters.');
      return;
    }
    handleAuth({email, password});
  };

  // const submitData = (): void => {
...

      <UI.Block
        center
        style={styles.header}
        backgroundColor={colors.background}
        row>
        <UI.Clickable testID="back_button" onClick={() => navigation.goBack()}>
          <UI.Block row center width="auto">
            <UI.Icon name="chevron-back-circle-outline" />
            <UI.Spacer size={2} />
            <UI.Text color={colors.gray2}>Back</UI.Text>
          </UI.Block>
        </UI.Clickable>
      </UI.Block>

      <UI.Layout testID="layout">
        <UI.Text h1>Login.</UI.Text>
        <UI.Spacer large />

        <UI.Block>
          <UI.Block>
            <UI.Text body>Email Address</UI.Text>
            <UI.TextInput
              testID="email_field"
              autoCorrect={false}
              autoCapitalize="none"
              value={email}
              onChangeText={setEmail}
              error={emailError}
              keyboardType="email-address"
...

          <UI.Spacer />

          <UI.Block>
            <UI.Text body>Password</UI.Text>
            <UI.TextInput
              testID="password_field"
              value={password}
              autoCorrect={false}
              autoCapitalize="none"
              onChangeText={setPassword}
              error={passwordError}
              password={!passwordVisible}
...
          <UI.Spacer />
        </UI.Block>
      </UI.Layout>

      <UI.Block backgroundColor={colors.background} style={styles.footer}>
        <UI.Button primary onClick={validateEntry}>
          <UI.Block testID="login_button" row middle>
            <UI.Text color={colors.white} bold>
              LOGIN
            </UI.Text>
            <UI.Spacer />
            {isLoading && <ActivityIndicator color={colors.white} />}
          </UI.Block>
...
        {!isKeyboardOpen && (
          <>
            <UI.Block row middle>
              <UI.Text>Forgot Password?</UI.Text>
              <UI.Spacer size={3} />
              <UI.Link
                testID="reset_link"
                onClick={() => navigation.push('RequestPasswordReset')}>
                Reset
              </UI.Link>
            </UI.Block>

            <UI.Spacer medium />
...
