...
        </UI.Clickable>
      </UI.Block>

      <UI.Layout>
        <UI.Text h1>Request {'\n'}Password reset.</UI.Text>
        <UI.Spacer />
        <UI.Text>Enter your email address to reset your password.</UI.Text>
        <UI.Spacer large />

        <UI.Block>
          <UI.Text body>Email address</UI.Text>
          <UI.TextInput
            autoCorrect={false}
...
