...
                <Reveal duration={1500} from={0} to={1}>
                  <UI.Block style={styles.content}>
                    <UI.Text
                      color={colors.white}
                      h1
                      style={{textAlign: 'center'}}>
                      The easiest way to withdraw cash
                    </UI.Text>

                    <UI.Spacer medium />

                    <UI.Text color={colors.white} style={{textAlign: 'center'}}>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
...
              style={{
                paddingHorizontal: wd('4%'),
                position: 'absolute',
                bottom: 0,
              }}>
              <UI.Button
                testID="create_account_button"
                white
                onClick={() => navigation.navigate('Register')}>
                <UI.Text bold>CREATE ACCOUNT</UI.Text>
              </UI.Button>

              <UI.Spacer />
...
