...

      <UI.Layout refreshing={isLoading}>
        <UI.Text h1>Email {'\n'}Verification.</UI.Text>

        <UI.Spacer />

        <UI.Text>We have sent a 6-digit code to your mailbox</UI.Text>
        <UI.Block row>
          <UI.Text color={colors.secondary}>{user.email}.</UI.Text>
          <UI.Spacer size={3} />
          <UI.Text>Enter code here.</UI.Text>
        </UI.Block>

...
