...
        tabBarShowLabel: false,
      }}>
      <Tab.Screen
        name="HomeTab"
        component={HomeScreen}
        options={{
          tabBarTestID: 'home_tab_navigation',
          unmountOnBlur: true,
          tabBarIcon: ({focused}) => (
            <UI.Block
              style={[
                styles.tab,
                focused && {...styles.tabActive, borderColor: colors.green2},
...
